--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,13 @@
   </head>
 
   <body>
+    <div class='container'>
+
+<%= render 'layouts/flash_tasks' %>
+    
+    
     <%= yield %>
+    
+    </div>
   </body>
 </html>
