--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,6 +1,24 @@
 <%= form_for(task) do |f| %>
 
-<%= f.label :content, 'タスク'　%>
+<% if task.errors.any? %>
+
+    <div id="error_explanation">
+      <ul>
+        
+<% task.errors.full_messages.each do |task| %>
+
+        <li>
+<%= task %>
+</li>
+
+<% end %>
+
+      </ul>
+    </div>
+    
+<% end %>
+
+<%= f.label :content, 'タスク' %>
 
 <%= f.text_field :content %>
 
