--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -18,7 +18,15 @@
     
 <% end %>
 
+<%= f.label :status, 'ステータス' %>
+
+
+<%= f.text_field :status %>
+
+
+
 <%= f.label :content, 'タスク' %>
+
 
 <%= f.text_field :content %>
 
