--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,3 +1,8 @@
+<div class='row'>
+  <div class="col-xs-12">
+  <div class="col-sm-offset-2 col-sm-8">
+  <div class="col-lg-offset-3 col-lg-6">
+
 <%= form_for(task) do |f| %>
 
 <% if task.errors.any? %>
@@ -18,19 +23,28 @@
     
 <% end %>
 
+  <div class="form-group">
+
 <%= f.label :status, 'ステータス' %>
 
 
 <%= f.text_field :status %>
 
-
+  </div>
+  
+  <div class="form-group">
 
 <%= f.label :content, 'タスク' %>
 
 
-<%= f.text_field :content %>
+<%= f.text_field :content, class:'form-control' %>
 
+  </div>
 
 <%= f.submit '登録' %>
 
 <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
