--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,19 +1,23 @@
 <h1>タスク一覧</h1>
 
-<ul>
+<table class="table table-striped table-bordered">
+
+<tr>
   
 <% @tasks.each do |task| %>
 
-    <li>
+    <td>
 <%= link_to task.id, task %>
 :
 <%= task.status %>
   &gt;
 <%= task.content %>
-</li>
+</td>
 
 <% end %>
+  
+</tr>
 
-</ul>
+</table>
 
-<%= link_to '新規タスクの登録', new_task_path %>
+<%= link_to '新規タスクの登録', new_task_path, class: "btn btn-primary" %>
