--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,7 +1,6 @@
 <div class='row'>
-  <div class="col-xs-12">
-  <div class="col-sm-offset-2 col-sm-8">
-  <div class="col-lg-offset-3 col-lg-6">
+  <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6 ">
+
 
 <%= form_for(task) do |f| %>
 
@@ -28,7 +27,7 @@
 <%= f.label :status, 'ステータス' %>
 
 
-<%= f.text_field :status %>
+<%= f.text_field :status, class: 'form-control' %>
 
   </div>
   
@@ -41,10 +40,8 @@
 
   </div>
 
-<%= f.submit '登録' %>
+<%= f.submit '登録' ,class: 'btn btn-primary' %>
 
 <% end %>
-        </div>
-      </div>
     </div>
   </div>
